# trackerstatus_discord

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  TODO.md  config.json  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
trackerstatus_discord/: __init__.py  bot.py
