[tool.poetry]
name = "trackerstatus-discord"
version = "0.1.0"
description = "A Discord bot that monitors tracker statuses and sends notifications"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "trackerstatus_discord"}]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.5.2"
trackerstatus = "1.0.5"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["discord.*", "trackerstatus.*", "dotenv.*"]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100 