[tool.poetry]
name = "trackerstatus-discord"
version = "0.1.0"
description = "A Discord bot that monitors trackerstatus.info and sends notifications"
authors = ["mauvehed <nate@mvh.dev>"]
readme = "README.md"
packages = [{include = "trackerstatus_discord"}]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.5.2"
trackerstatus = "1.0.8"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"
pylint = "^3.3.5"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true
pretty = true
implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "discord.*",
    "trackerstatus.*",
    "dotenv.*"
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0301",  # line-too-long (handled by black)
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0703",  # broad-except
    "E0401",  # import-error (we know the packages are installed)
    "W1203",  # logging-fstring-interpolation (we want to use f-strings)
    "W1309",  # f-string-without-interpolation (we want consistent string formatting)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
